[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
description = "A Rust proc-macro attribute parser"
documentation = "https://docs.rs/bae"
edition = "2018"
homepage = "https://github.com/davidpdrsn/bae"
keywords = ["web", "graphql", "juniper"]
license = "MIT"
name = "bae"
readme = "README.md"
repository = "https://github.com/davidpdrsn/bae.git"
version = "0.1.2"

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "0.4"
heck = "0.3"

[dev_dependencies]
trybuild = "1.0.23"

[lib]
proc-macro = true
path = "src/lib.rs"
